blocks/menu.css
.menu {
    padding: 100px 0;
    background-color: #fff;
    background-image: url(../images/background_menu.svg);
    background-size: cover;
}

.menu__title {
    margin: 0 auto;
    text-align: center;
    max-width: 780px;
    font-family: "Inter"; 
    font-style: normal; 
    font-weight: 500; 
    font-size: 44px; 
    line-height: 52px;
}

.menu__subtitle {
    max-width: 780px;
    margin: 24px auto 0;
    text-align: center;
    font-family: "Noto Serif"; 
    font-weight: normal; 
    font-size: 20px; 
    line-height: 30px;
}

.menu__cards{
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 100px;
    margin: 0%;
    padding: 0%;
}

